<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.sakaiproject</groupId>
        <artifactId>oss-parent</artifactId>
        <version>1</version>
    </parent>

    <groupId>org.sakaiproject</groupId>
    <artifactId>reflectutils</artifactId>
    <version>0.9.21-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>Reflection Utilities</name>
    <inceptionYear>2006</inceptionYear>
    <description>A set of reflection utilities and miscellaneous utilities related to
        working with classes and their fields with no dependencies which is compatible
        with java 1.5 and generics. The package was originally created by Aaron Zeckoski
        for the Sakai Project and Generic DAO project but was repackaged to make it
        distributable by request. It is used in the RSF framework
        (http://www2.caret.cam.ac.uk/rsfwiki/) and the EntityBroker among other things.
        Note about the BeanUtils provided dependency: BeanUtils is not required if you are
        not using it in your project. Note about the Hibernate provided dependency:
        Hibernate is not required if you are not using it in your project.
    </description>

    <properties>
        <beanutils.version>1.9.4</beanutils.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <licenses>
        <license>
            <name>Apache License 2</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
        <license>
            <name>Creative Commons Attribution 4.0</name>
            <url>https://creativecommons.org/licenses/by/4.0/</url>
        </license>
        <license>
            <name>Educational Community License, Version 2.0</name>
            <url>https://opensource.org/licenses/ECL-2.0</url>
        </license>
    </licenses>

    <organization>
        <name>Sakai Community and the Apereo Foundation</name>
        <url>https://www.sakailms.org/</url>
    </organization>

    <issueManagement>
        <system>Github Issues</system>
        <url>https://github.com/sakaiproject/reflectutils/issues</url>
    </issueManagement>

    <developers>
        <developer>
            <id>aaronz@vt.edu</id>
            <name>Aaron Zeckoski</name>
        </developer>
    </developers>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <scm>
        <url>https://github.com/sakaiproject/reflectutils</url>
        <connection>scm:git:git@github.com:sakaiproject/reflectutils.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/sakaiproject/reflectutils.git</developerConnection>
    </scm>

    <dependencies>
        <dependency>
            <groupId>commons-beanutils</groupId>
            <artifactId>commons-beanutils</artifactId>
            <version>${beanutils.version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
        <testSourceDirectory>src/test/java</testSourceDirectory>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <rules>
                        <requireJavaVersion>
                            <version>[11,)</version>
                        </requireJavaVersion>
                    </rules>

                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.maven.surefire</groupId>
                        <artifactId>surefire-junit4</artifactId>
                        <version>3.2.5</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <properties>
                        <property>
                            <name>junit</name>
                            <value>org.apache.maven.surefire.junit4.JUnit4Provider</value>
                        </property>
                    </properties>
                    <testFailureIgnore>false</testFailureIgnore>
                    <forkCount>1</forkCount>
                    <reuseForks>false</reuseForks>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
